appId: br.com.leaf.ride
---
- launchApp

- runFlow:
    when:
      visible: "This is the developer menu"
    commands:
      - tapOn: "Continue"

- runFlow:
    when:
      visible: "Connected to:"
    commands:
      - tapOn:
          point: "88%,44%"

- tapOn: "Número"
- eraseText
- inputText: "21102938475"

- runFlow:
    when:
      visible: "Continuar"
    commands:
      - tapOn: "Continuar"

- runFlow:
    when:
      visible: "Verificação"
    commands:
      - inputText: "992111"

- runFlow:
    when:
      visible: "Verificar"
    commands:
      - tapOn: "Verificar"

- waitForAnimationToEnd
- takeScreenshot: "debug-review-passenger-after-login"
