appId: br.com.leaf.ride
---
- launchApp

- runFlow:
    when:
      visible: "This is the developer menu"
    commands:
      - tapOn: "Continue"

- openLink: "br.com.leaf.ride://robotaxi/driver/panel"

- runFlow:
    when:
      visible: ".*Abrir com.*Leaf.*"
    commands:
      - tapOn: "Abrir"

- runFlow:
    when:
      visible: "This is the developer menu"
    commands:
      - tapOn: "Continue"

- runFlow:
    when:
      visible: "Continue"
    commands:
      - tapOn: "Continue"

- waitForAnimationToEnd
- takeScreenshot: "qa-driver-final-view"
