appId: br.com.leaf.ride
---
- launchApp

- runFlow:
    when:
      visible: ".*Abrir com.*Leaf.*"
    commands:
      - tapOn: "Abrir"

- runFlow:
    when:
      visible: "This is the developer menu"
    commands:
      - tapOn: "Continue"

- runFlow:
    when:
      visible: "Connected to:"
    commands:
      - tapOn:
          point: "88%,44%"

- waitForAnimationToEnd
- takeScreenshot: "qa-driver-cleanup-state"
