appId: br.com.leaf.ride
---
- launchApp
- runFlow:
    when:
      visible: "This is the developer menu"
    commands:
      - tapOn: "Continue"
- runFlow:
    when:
      visible: "Connected to:"
    commands:
      - tapOn:
          point: "88%,44%"
- waitForAnimationToEnd
- tapOn:
    point: "74%,91%"
- extendedWaitUntil:
    visible: "Concluir ativação"
    timeout: 7000
